# nwo-market-layer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: full_market_lifecycle.py
scripts/: mount_to_layer5.py
src/: __init__.py  cli.py
src/api/: __init__.py  main.py  routes.py
src/assembly_ai/: __init__.py  cache.py  service.py
src/identity/: __init__.py  abis.py  service.py
src/simulation/: __init__.py  service.py
src/token_economy/: __init__.py  settlement.py
tests/: test_api.py  test_identity.py  test_services.py
