[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwo-market-layer6"
version = "0.1.0"
description = "NWO Robotics Layer 6 — Market Features (Identity, Simulation, Assembly AI, Token Economy)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "NWO Robotics", email = "dev@nworobotics.cloud" }]
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Blockchain / Web3 (Base Mainnet)
    "web3>=7.0.0",               # Base Mainnet RPC calls, contract reads
    "eth-account>=0.13.0",       # EIP-712 signing for meta-transactions

    # HTTP clients (Cardiac Oracle + Relayer + simulation-api)
    "httpx>=0.27.0",

    # Assembly AI (Claude API)
    "anthropic>=0.28.0",

    # Database (cache assembly instructions, simulation results)
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",

    # Data / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",

    # CLI
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.9",
]

[project.scripts]
nwo-market = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
